# Bottleneck-Hunter

./: .audit_findings.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  FACTCHECK_VERIFICATION.md  PLAN.md  PRODUCT.md  README.md  README_todo.md  SERVER_RUNNING.md  UPDATE_HISTORY.json  _commit_msg.txt  cookies.txt  deploy.sh  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  setup.py  新用户使用指南.md
.githooks/: README.md  post-commit
bottleneck_hunter/: __init__.py  cli.py  relay_client.py
bottleneck_hunter/auth/: __init__.py  crypto.py  current_user.py  dependencies.py  email_sender.py  jwt_utils.py  migration.py  models.py  store.py
bottleneck_hunter/chain/: bottleneck.py  catalyst.py  chain_store.py  cross_validation.py  decomposer.py  fact_check.py  financial_data.py  graph.py  hot_sector.py  industry_concentration.py  investability_filter.py  json_utils.py  meeting_data.py  models.py  report.py  roundtable.py  smart_money.py  supplier_eval.py  supplier_search.py
bottleneck_hunter/data_provider/: __init__.py  base.py  data_source_catalog.py  hub.py  manager.py  providers.py  scheduler.py  yf_gate.py
bottleneck_hunter/dataflows/: store.py
bottleneck_hunter/llm_clients/: factory.py  fallback.py  health.py  model_context.py  role_registry.py  validate.py
bottleneck_hunter/vip/: __init__.py  chat.py  compliance.py  derivatives.py  ingest.py  number_guard.py  portfolio.py
bottleneck_hunter/watchlist/: __init__.py  ab_compare.py  backtest.py  budget.py  catalyst_monitor.py  committee.py  constraint_validator.py  data_validator.py  decision_engine.py  earnings_pipeline.py  industry_zh.py  institutional_pipeline.py  macro_consultation.py  macro_data.py  market_hours.py  model_calibrator.py  models.py  news_pipeline.py  notice_pipeline.py  options_pipeline.py  performance.py  performance_stats.py  persona.py  position_sizing.py  preference_learner.py  price_pipeline.py  prompt_guard.py  quality_gate.py  regime_mapper.py  retry.py  risk_metrics.py  schedule_config.py  scheduler.py  sec_pipeline.py  slippage.py  store.py  store_ai_models.py  store_base.py  store_budget.py  store_committee.py  (+16 more)
bottleneck_hunter/web/: admin_api.py  admin_events.py  ai_config_api.py  api.py  app.py  auth_api.py  custom_provider_api.py  data_report_api.py  data_source_api.py  decision_api.py  egress_api.py  egress_relay.py  key_isolation_migration.py  model_tester.py  oplog.py  oplog_api.py  phase_cache.py  phase_rehydrate.py  provider_migration.py  refresh_guard.py  reverse_api.py  settings_api.py  streaming.py  syslog_api.py  trading_api.py  translate.py  translate_api.py  user_api.py  vip_api.py  watchlist_api.py
deploy/: nginx-observability.conf
docs/: CODE_REVIEW_FINDINGS.md  COMMITTEE_PHASE2.md  CROSS_VALIDATION_REVIEW_2026-07-03.md  DATASOURCE_AUDIT_2026-07-08.md  DECISION_LOOP_IMPROVEMENT.md  DEPLOY.md  FACTCHECK_GATE_SUMMARY.md  FACTCHECK_PRODUCTION_TEST.md  FULL_SYSTEM_REVIEW_2026-07-02.md  IMPROVEMENT_PLAN.md  MANUAL_TEST_GUIDE.md  MODEL_SCHEDULER_DESIGN.md  OBSERVABILITY.md  POST_UPGRADE_AUDIT_2026-07-02.md  REGRESSION_TEST_RESULTS.md  SESSION_HANDOFF.md  SYSTEM_AUDIT_REPORT.md  TESTING.md  TRADING_DECISION_SYSTEM.md  UPGRADE_PLAN_9.md  VIP_ADVISOR_HANDOFF.md  VIP_ADVISOR_PLAN.md  VIP_ADVISOR_TECH_SPEC.md  market_attention_v2.md  使用指南V2.1.md  新用户使用指南V2.2.md  新用户使用指南V2.3.md
scripts/: backup.py  clean_role_config.py  gen_update_history.py  normalize_tickers.py
tests/: check_credibility_in_db.py  test_admin_center.py  test_alpha_scorer.py  test_auth_cookie.py  test_auto_update.py  test_bottleneck.py  test_budget.py  test_catalyst.py  test_chain_cache_reuse.py  test_company_archive.py  test_context_aware_scheduling.py  test_cross_validation.py  test_data_source_config.py  test_datahub.py  test_decision_8b2.py  test_decision_8b3.py  test_decision_8b4.py  test_decision_8b5.py  test_decision_discipline.py  test_decision_market.py  test_decomposer.py  test_ds_scheduler.py  test_egress_relay.py  test_email_verification.py  test_exec_price_guard.py  test_factcheck_integration.py  test_final_scorer.py  test_financial_data.py  test_fred_borrow.py  test_gate_wiring.py  test_graph.py  test_hot_sector.py  test_industry_concentration.py  test_json_utils.py  test_key_isolation.py  test_loop_e2e.py  test_macro_consult.py  test_macro_consult_retry.py  test_macro_merge.py  test_market_isolation.py  (+61 more)
(+111 files in other folders)
