[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bottleneck-hunter"
version = "0.1.0"
description = "AI-powered supply chain bottleneck stock screener"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "networkx>=3.0",
    "yfinance>=0.2.0",
    "akshare>=1.14.0",
    "baostock>=0.8.8",
    "pandas>=2.0",
    "rich>=13.0",
    "questionary>=2.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "numpy>=1.24",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# 额外数据源（增强/兜底）。baostock 已提升到主依赖——它是东财(akshare/efinance)挂掉时
# 唯一可靠的 A股兜底源，纯 Python 体积小，保证 A股开箱即用。
datasources = [
    "efinance>=0.5",
    "pytdx>=1.72",
    "finnhub-python>=2.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
bottleneck-hunter = "bottleneck_hunter.cli:app"

# 只打包 bottleneck_hunter*，避免 flat-layout 自动发现把顶层 tests/ 误当第二个包
# （多个顶层包会导致干净环境下的构建失败）
[tool.setuptools.packages.find]
include = ["bottleneck_hunter*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: 真实网络/外部依赖的慢测试(如实拉宏观数据)；快子集用 `pytest -m \"not slow\"` 排除",
]
